# nomadic

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  setup.cfg
.github/workflows/: build.yml  docs.yaml
advanced/: index.html
basic/: index.html
docs/: advanced.md  basic.md  faq.md  index.md  installation.md  output_files.md  quick_start.md  share_backup.md  understand.md
docs/css/: custom.css
environments/: dev.yml  run.yml
experiment_templates/: NOMADS_Library_Ligation_Worksheet.xlsx  NOMADS_Library_Rapid_Worksheet.xlsx  NOMADS_Library_Worksheet.xlsx  NOMADS_PCR_Worksheet.xlsx  NOMADS_sWGA_Worksheet.xlsx
faq/: index.html
installation/: index.html
output_files/: index.html
quick_start/: index.html
scripts/: run_realtime.sh  simulate_sequencing.py
search/: search_index.json
share_backup/: index.html
src/nomadic/: cli.py
src/nomadic/aggregate/: commands.py
src/nomadic/backup/: commands.py
src/nomadic/configure/: commands.py
src/nomadic/dashboard/: commands.py  main.py
src/nomadic/download/: corrections.py  downloader.py  main.py  references.py
src/nomadic/map/: mappers.py  test_mappers.py
src/nomadic/process/: commands.py
src/nomadic/realtime/: commands.py  factory.py  main.py  steps.py  watchers.py
src/nomadic/realtime/dashboard/: builders.py  components.py  creator.py
src/nomadic/realtime/pipelines/: barcode.py  experiment.py
src/nomadic/share/: commands.py
src/nomadic/start/: commands.py
src/nomadic/start/data/: 0000-00-00_example.csv  NOMADS_Library_Worksheet.xlsx
src/nomadic/summarize/: commands.py  compute.py  main.py
src/nomadic/util/: bed.py  bed_test.py  cli.py  cli_test.py  config.py  config_test.py  consequence.py  dirs.py  exceptions.py  experiment.py  fasta.py  gff.py  logging_config.py  metadata.py  metadata_test.py  minknow.py  minknow_test.py  panel.py  port.py  regions.py  rsync.py  samtools.py  settings.py  ssh.py  ssh_test.py  summary.py  sync.py  vcf.py  workspace.py
tests/: README.md  import_test.py  test_bed.py  test_metadata.py
tests/_data/metadata/: sample_info_badbarcode-format.csv  sample_info_badheader.csv  sample_info_dupbarcode.csv  sample_info_eurosep.csv  sample_info_good.csv  sample_info_nobarcode.csv  sample_info_semicolon.csv
understand/: index.html
(+32 files in other folders)
