[metadata]
name = nomadic
version = 0.3.0
description = Mobile sequencing and analysis in real-time
author = Jason A. Hendry
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    =src
install_requires =
    click
    dash
    numpy
    pandas
    platformdirs
    pyyaml
    seaborn

python_requires = >=3.10
zip_safe = no

[options.package_data]
nomadic.realtime.dashboard =
    assets/*
nomadic.start =
    data/**

[options.entry_points]
console_scripts =
	nomadic = nomadic.cli:cli

[options.packages.find]
where=src

[flake8]
max-line-length = 88
